2008-03-03  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in
	(--overwrite-admin-index-dot-roc): new optional command line opt
	(--nooverwrite-admin-index-dot-roc): new optional command line opt
	(--overwrite-admin-index-dot-rock): new optional command line opt
	(--nooverwrite-admin-index-dot-rock): new optional command line opt
	($DO_OVERWRITE_ADMIN_INDEX_DOT_ROC):  new "overwrite" flag
	($DO_OVERWRITE_ADMIN_INDEX_DOT_ROCK): new "overwrite" flag
	(__maybe_create_index_dot_rock_or_die): new parameterized function
	  that is a generalization of the old
	  'maybe_create_index_dot_rock_or_die()' function.
	(__maybe_create_named_index_dot_rock_file_or_die): new specialized content
	  producing worker func
	(maybe_create_index_dot_rock_or_die): changed to invoke above
	  parameterized worker func
	(maybe_create_admin_index_dot_rock_or_die): new func; also invokes
	  the above parameterized worker func

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_create_apache_mod_perl_startup_dot_pl_file_or_die): new function
	(--apache-mod-perl-startup=FILE): new required command line opt
	(--overwrite-apache-mod-perl-startup): new optional command line opt
	(--nooverwrite-apache-mod-perl-startup): new optional command line opt
	($BEDROCK_DIST_DATA_DIR): filter in a build time
	(SEE ALSO): /usr/sbin/a2ensite
	(SEE ALSO): /usr/sbin/a2dissite

	Renamed 'error.roc' to 'error.rock':
	* src/main/resources/htdocs/error.roc:  removed file
	* src/main/resources/htdocs/error.rock: added file
	* src/main/resources/htdocs/Makefile.am
	(dist_htdocs_DATA): Changed 'error.roc' reference to 'error.rock'
	(install-data-hook): New automake augmentation target that creates
	  an 'error.roc' symlink to our installed 'error.rock' file

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_copy_dist_error_dot_rock_or_die): new function
	(--overwrite-error-dot-roc): new command line opt
	(--nooverwrite-error-dot-roc): new command line opt