@@ -1,6 +1,10 @@
 2008-03-03  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
 	* src/main/perl/bin/bedrock-create-site.in
+	(with_changed_directory): new utility function. Used to update all
+	  invocations of symlink() to create relative symlinks.
+
+	* src/main/perl/bin/bedrock-create-site.in
 	(--overwrite-admin-index-dot-roc): new optional command line opt
 	(--nooverwrite-admin-index-dot-roc): new optional command line opt
 	(--overwrite-admin-index-dot-rock): new optional command line opt
@@ -16,6 +20,7 @@
 	  parameterized worker func
 	(maybe_create_admin_index_dot_rock_or_die): new func; also invokes
 	  the above parameterized worker func
+
 
 	* src/main/perl/bin/bedrock-create-site.in
 	(maybe_create_apache_mod_perl_startup_dot_pl_file_or_die): new function
